--- a/rush.yaml
+++ b/rush.yaml
@@ -68,7 +68,7 @@ images:
 - index: 4
   image: SevensRoadMagician-RDMRP1-JP-R.png
 - index: 5
-  image: SevensRoadMagician-RDORP1-JP-OP.png
+  image: SevensRoadMagician-RDORP1-JP-ORR.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
@@ -2172,7 +2172,7 @@ images:
 - index: 2
   image: BlueEyesWhiteDragon-RDDD01-JP-ScR.png
 - index: 3
-  image: BlueEyesWhiteDragon-RDORP1-JP-OP.png
+  image: BlueEyesWhiteDragon-RDORP1-JP-ORR.png
 sets:
   ja:
   - set_number: RD/KP01-JP000
@@ -17833,6 +17833,8 @@ series:
 images:
 - index: 1
   image: SupremeMachineMagnumOverlordL-RDSBD1-JP-C.png
+- index: 2
+  image: SupremeMachineMagnumOverlordL-RDORP1-JP-ORR.png
 sets:
   ja:
   - set_number: RD/MAX1-JP001
@@ -17950,7 +17952,7 @@ series:
 maximum_atk: 3500
 images:
 - index: 1
-  image: SupremeMachineMagnumOverlord-RDSBD1-JP-C.png
+  image: SupremeMachineMagnumOverlord-RDORP1-JP-ORR.png
 sets:
   ja:
   - set_number: RD/MAX1-JP002
@@ -18047,6 +18049,8 @@ series:
 images:
 - index: 1
   image: SupremeMachineMagnumOverlordR-RDSBD1-JP-C.png
+- index: 2
+  image: SupremeMachineMagnumOverlordR-RDORP1-JP-ORR.png
 sets:
   ja:
   - set_number: RD/MAX1-JP003
@@ -57647,7 +57651,7 @@ series:
 - Galactica
 images:
 - index: 1
-  image: GalacticaOblivion-RDGRD1-JP-NPR.png
+  image: GalacticaOblivion-RDORP1-JP-ORR.png
 - index: 2
   image: GalacticaOblivion-RD711B-JP-NPR.png
 sets:
@@ -80075,7 +80079,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: CintamaniofSaturnius-RDORP1-JP-OP.png
+  image: CintamaniofSaturnius-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP064
@@ -80131,7 +80135,7 @@ atk: 2400
 def: 1200
 images:
 - index: 1
-  image: AlmastraXIAquarius-RDORP1-JP-OP.png
+  image: AlmastraXIAquarius-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP057
@@ -80411,7 +80415,7 @@ atk: 1000
 def: 0
 images:
 - index: 1
-  image: CobaltKobold-RDORP1-JP-OP.png
+  image: CobaltKobold-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP060
@@ -80463,7 +80467,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: PowerBond-RDORP1-JP-OP.png
+  image: PowerBond-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP070
@@ -80535,7 +80539,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: CyberDragon-RDORP1-JP-OP.png
+  image: CyberDragon-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP024
@@ -80594,7 +80598,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: ProtoCyberDragon-RDORP1-JP-OP.png
+  image: ProtoCyberDragon-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP026
@@ -80665,7 +80669,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: CyberEndDragon-RDORP1-JP-OP.png
+  image: CyberEndDragon-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP019
@@ -80737,7 +80741,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: CyberTwinDragon-RDORP1-JP-OP.png
+  image: CyberTwinDragon-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP020
@@ -80807,7 +80811,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: CyberRushDragon-RDORP1-JP-OP.png
+  image: CyberRushDragon-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP021
@@ -80877,7 +80881,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: CyberAssaultDragon-RDORP1-JP-OP.png
+  image: CyberAssaultDragon-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP022
@@ -80932,7 +80936,7 @@ atk: 1200
 def: 1300
 images:
 - index: 1
-  image: CyberGryphon-RDORP1-JP-OP.png
+  image: CyberGryphon-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP025
@@ -80983,7 +80987,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: CyberEntry-RDORP1-JP-OP.png
+  image: CyberEntry-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP029
@@ -81040,7 +81044,7 @@ series:
 - Beast Gear
 images:
 - index: 1
-  image: BeastGearEmperorGliderFox-RDORP1-JP-OP.png
+  image: BeastGearEmperorGliderFox-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP055
@@ -81091,7 +81095,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: DragonlionPitTrap-RDORP1-JP-OP.png
+  image: DragonlionPitTrap-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP068
@@ -81146,7 +81150,7 @@ atk: 500
 def: 1300
 images:
 - index: 1
-  image: FutureAeromancer-RDORP1-JP-OP.png
+  image: FutureAeromancer-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP054
@@ -81199,7 +81203,7 @@ series:
 - Heavenly
 images:
 - index: 1
-  image: HeavenlySelection-RDORP1-JP-OP.png
+  image: HeavenlySelection-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP065
@@ -81256,7 +81260,7 @@ series:
 - Ultimate Flag
 images:
 - index: 1
-  image: UltimateFlagBeastLeadUnicorn-RDORP1-JP-OP.png
+  image: UltimateFlagBeastLeadUnicorn-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP050
@@ -81313,7 +81317,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: LoveAngel-RDORP1-JP-OP.png
+  image: LoveAngel-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP062
@@ -81366,7 +81370,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: ResurrectionoftheBlazeFiends-RDORP1-JP-OP.png
+  image: ResurrectionoftheBlazeFiends-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP017
@@ -81419,7 +81423,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: CorruptionoftheBlazeFiends-RDORP1-JP-OP.png
+  image: CorruptionoftheBlazeFiends-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP016
@@ -81472,7 +81476,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: ReturnoftheBlazeFiends-RDORP1-JP-OP.png
+  image: ReturnoftheBlazeFiends-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP015
@@ -81529,7 +81533,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: RageSerpentoftheBlazeFiends-RDORP1-JP-OP.png
+  image: RageSerpentoftheBlazeFiends-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP014
@@ -81586,7 +81590,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: GuideoftheBlazeFiends-RDORP1-JP-OP.png
+  image: GuideoftheBlazeFiends-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP013
@@ -81659,7 +81663,7 @@ series:
 maximum_atk: 3000
 images:
 - index: 1
-  image: BlazeFiendOverlordsBeelucitaroth-RDORP1-JP-OP.png
+  image: BlazeFiendOverlordsBeelucitaroth-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP011
@@ -81718,7 +81722,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: BlazeFiendOverlordsBeelucitarothL-RDORP1-JP-OP.png
+  image: BlazeFiendOverlordsBeelucitarothL-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP010
@@ -81775,7 +81779,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: BlazeFiendOverlordsBeelucitarothR-RDORP1-JP-OP.png
+  image: BlazeFiendOverlordsBeelucitarothR-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP012
@@ -81848,7 +81852,7 @@ series:
 maximum_atk: 4000
 images:
 - index: 1
-  image: DoomblazeFiendOverlordDespairacion-RDORP1-JP-OP.png
+  image: DoomblazeFiendOverlordDespairacion-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP008
@@ -81908,7 +81912,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: DoomblazeFiendOverlordDespairacionL-RDORP1-JP-OP.png
+  image: DoomblazeFiendOverlordDespairacionL-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP007
@@ -81968,7 +81972,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: DoomblazeFiendOverlordDespairacionR-RDORP1-JP-OP.png
+  image: DoomblazeFiendOverlordDespairacionR-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP009
@@ -82107,7 +82111,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieLumiere-RDORP1-JP-OP.png
+  image: ExcutieLumiere-RDORP1-JP-SR.png
 - index: 2
   image: ExcutieLumiere-RDJF23-JP-OP.png
 sets:
@@ -82171,7 +82175,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieFloa-RDORP1-JP-OP.png
+  image: ExcutieFloa-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP033
@@ -82243,7 +82247,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieLeir-RDORP1-JP-OP.png
+  image: ExcutieLeir-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP032
@@ -82356,7 +82360,7 @@ atk: 1200
 def: 600
 images:
 - index: 1
-  image: DoubleTwinDragon-RDORP1-JP-OP.png
+  image: DoubleTwinDragon-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP051
@@ -82412,7 +82416,7 @@ atk: 2400
 def: 1500
 images:
 - index: 1
-  image: DestroyerofDragonSorcerers-RDORP1-JP-OP.png
+  image: DestroyerofDragonSorcerers-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP049
@@ -82472,7 +82476,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: YamirulertheDarkDelayerSupremeSoldierSpear-RDORP1-JP-OP.png
+  image: YamirulertheDarkDelayerSupremeSoldierSpear-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP052
@@ -82528,7 +82532,7 @@ atk: 1000
 def: 800
 images:
 - index: 1
-  image: MagicMirrorYouth-RDORP1-JP-OP.png
+  image: MagicMirrorYouth-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP058
@@ -82579,7 +82583,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ValkyrianCall-RDORP1-JP-OP.png
+  image: ValkyrianCall-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP063
@@ -82630,7 +82634,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: ValkyrianGuard-RDORP1-JP-OP.png
+  image: ValkyrianGuard-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP066
@@ -82744,7 +82748,7 @@ atk: 2500
 def: 1600
 images:
 - index: 1
-  image: RageWreckerDragonAngerogue-RDORP1-JP-OP.png
+  image: RageWreckerDragonAngerogue-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP056
@@ -82854,7 +82858,7 @@ atk: 1200
 def: 700
 images:
 - index: 1
-  image: RisingSoldier-RDORP1-JP-OP.png
+  image: RisingSoldier-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP059
@@ -82926,7 +82930,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieLilius-RDORP1-JP-OP.png
+  image: ExcutieLilius-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP034
@@ -82983,7 +82987,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieLucy-RDORP1-JP-OP.png
+  image: ExcutieLucy-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP035
@@ -83040,7 +83044,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieRam-RDORP1-JP-OP.png
+  image: ExcutieRam-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP036
@@ -83109,7 +83113,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieProuty-RDORP1-JP-OP.png
+  image: ExcutieProuty-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP037
@@ -83162,7 +83166,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieScout-RDORP1-JP-OP.png
+  image: ExcutieScout-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP038
@@ -83215,7 +83219,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieScramble-RDORP1-JP-OP.png
+  image: ExcutieScramble-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP039
@@ -83268,7 +83272,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieEmergency-RDORP1-JP-OP.png
+  image: ExcutieEmergency-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP040
@@ -83321,7 +83325,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieCatch-RDORP1-JP-OP.png
+  image: ExcutieCatch-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP041
@@ -83374,7 +83378,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieBreak-RDORP1-JP-OP.png
+  image: ExcutieBreak-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP042
@@ -83426,7 +83430,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: DarkHole-RDORP1-JP-OP.png
+  image: DarkHole-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP069
@@ -83496,7 +83500,7 @@ series:
 - Voidvelgr
 images:
 - index: 1
-  image: VoidvelgrApocalypse-RDORP1-JP-OP.png
+  image: VoidvelgrApocalypse-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP047
@@ -83552,7 +83556,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: DarkProphet-RDORP1-JP-OP.png
+  image: DarkProphet-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP048
@@ -83609,7 +83613,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: FinalizePhoenix-RDORP1-JP-OP.png
+  image: FinalizePhoenix-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP046
@@ -83667,7 +83671,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: CANID-RDORP1-JP-OP.png
+  image: CANID-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP053
@@ -83722,7 +83726,7 @@ atk: 800
 def: 1200
 images:
 - index: 1
-  image: DeliriumLampyris-RDORP1-JP-OP.png
+  image: DeliriumLampyris-RDORP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP061
@@ -83793,7 +83797,7 @@ series:
 - Cyber Dragon
 images:
 - index: 1
-  image: CyberStealthDragon-RDORP1-JP-OP.png
+  image: CyberStealthDragon-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP023
@@ -83848,7 +83852,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: CyberSerpent-RDORP1-JP-OP.png
+  image: CyberSerpent-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP027
@@ -83899,7 +83903,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: EvolutionRushBurst-RDORP1-JP-OP.png
+  image: EvolutionRushBurst-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP028
@@ -83950,7 +83954,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: MultipleAdapterUnit-RDORP1-JP-OP.png
+  image: MultipleAdapterUnit-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP030
@@ -84003,7 +84007,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: DoomblazeDespair-RDORP1-JP-OP.png
+  image: DoomblazeDespair-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP018
@@ -84058,7 +84062,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: GalactiaraEve-RDORP1-JP-OP.png
+  image: GalactiaraEve-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP043
@@ -84076,7 +84080,7 @@ name:
   it:
   pt:
   ja: はたらくことのは
-  ja_romaji: Hatarakukotonowa
+  ja_romaji: Hataraku Kotonoha
   ko:
   ko_rr:
   zh-TW:
@@ -84145,6 +84149,8 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Continuous
 effect:
   en: |-
     If you would normal draw until you have 5 cards in your hand during your Draw Phase, normal draw until you have 6 cards in your hand instead.
