--- a/data/cards/72776252.yaml
+++ b/data/cards/72776252.yaml
@@ -1,7 +1,7 @@
 konami_id: 18198
 password: 72776252
 name:
-  en: Great Icejade Manifestation
+  en: Icejade Eminence Emergence
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 冰水大剑现
 text:
   en: |-
-    If your opponent has a monster on their field and/or in their GY, and you control a WATER monster: You can take 1 "Icejade" monster from your Deck, and either send it to the GY or Special Summon it. If a face-up "Icejade" monster you control leaves the field by an opponent's card, except by being destroyed (and except during the Damage Step): You can banish this card from your GY, then target 1 card your opponent controls; banish it. You can only use each effect of "Great Icejade Manifestation" once per turn.
+    If your opponent has a monster on their field and/or in their GY, and you control a WATER monster: You can take 1 "Icejade" monster from your Deck, and either send it to the GY or Special Summon it. If a face-up "Icejade" monster you control leaves the field by an opponent's card, except by being destroyed (and except during the Damage Step): You can banish this card from your GY, then target 1 card your opponent controls; banish it. You can only use each effect of "Icejade Eminence Emergence" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Icejade
 images:
 - index: 1
-  image: GreatIcejadeManifestation-PHHY-JP-R.png
+  image: IcejadeEminenceEmergence-PHHY-JP-R.png
 sets:
   ja:
   - set_number: PHHY-JP053
