--- a/data/cards/44519536.yaml
+++ b/data/cards/44519536.yaml
@@ -43,11 +43,11 @@ series:
 - Forbidden One
 images:
 - index: 1
-  image: '  LeftLegoftheForbiddenOne-LART-EN-UR-LE.png'
+  image: LeftLegoftheForbiddenOne-LART-EN-UR-LE.png
   illustration: LeftLegoftheForbiddenOne-TF04-JP-VG.jpg
 - index: '1.1'
-  image: LeftLegoftheForbiddenOne-LDK2-EN-C-UE.png
-  illustration: ' LeftLegoftheForbiddenOne-TF04-EN-VG.jpg'
+  image: LeftLegoftheForbiddenOne-BLCR-EN-StR-1E.png
+  illustration: LeftLegoftheForbiddenOne-TF04-EN-VG.jpg
 sets:
   en:
   - set_number: DB1-EN136
