--- a/data/rush/18256.yaml
+++ b/data/rush/18256.yaml
@@ -49,6 +49,9 @@ series:
 images:
 - index: 1
   image: ProphecyPhraseoftheColorsoftheWind-RDKP11-JP-UR.png
+- index: 2
+  image: ProphecyPhraseoftheColorsoftheWind-RDBDG2-JP-OP.png
+  illustration: ProphecyPhraseoftheColorsoftheWind-OW.png
 sets:
   ja:
   - set_number: RD/KP11-JP024
