--- a/data/rush/18361.yaml
+++ b/data/rush/18361.yaml
@@ -42,7 +42,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    All face-up Level 7 or higher monsters on the field lose 300 ATK/DEF.
+    Face-up Level 7 or higher monsters on the field lose 300 ATK/DEF.
   de:
   es:
   fr:
