--- a/rush.yaml
+++ b/rush.yaml
@@ -77031,6 +77031,9 @@ series:
 images:
 - index: 1
   image: ProphecyPhraseoftheColorsoftheWind-RDKP11-JP-UR.png
+- index: 2
+  image: ProphecyPhraseoftheColorsoftheWind-RDBDG2-JP-OP.png
+  illustration: ProphecyPhraseoftheColorsoftheWind-OW.png
 sets:
   ja:
   - set_number: RD/KP11-JP024
@@ -81516,7 +81519,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    All face-up Level 7 or higher monsters on the field lose 300 ATK/DEF.
+    Face-up Level 7 or higher monsters on the field lose 300 ATK/DEF.
   de:
   es:
   fr:
@@ -82000,7 +82003,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a face-up Level 6 monster on your field is destroyed by an opponent's attack or their card effect while you have no other monsters on your field.
+    When a face-up Level 6 monster on your field is destroyed by an opponent's attack or their card effect and you have no other monsters on your field.
   de:
   es:
   fr:
