--- a/data/cards/96561011.yaml
+++ b/data/cards/96561011.yaml
@@ -122,7 +122,7 @@ sets:
     rarities:
     - Ultra Rare
   - set_number: W6S-JP001
-    set_name: Duel Monsters Expert 2006 Promo Set
+    set_name: Yu-Gi-Oh! World Championship 2006 Set
     rarities:
     - Ultimate Rare
   - set_number: TP05-JP002
