--- a/data/cards/19847532.yaml
+++ b/data/cards/19847532.yaml
@@ -78,7 +78,7 @@ sets:
     rarities:
     - Ultra Rare
   - set_number: W6S-JP003
-    set_name: Duel Monsters Expert 2006 Promo Set
+    set_name: Yu-Gi-Oh! World Championship 2006 Set
     rarities:
     - Ultimate Rare
   - set_number: TP07-JP001
