--- a/data/cards/27062594.yaml
+++ b/data/cards/27062594.yaml
@@ -32,8 +32,7 @@ text:
     ①: 상대 몬스터의 직접 공격 선언시에 이 카드를 발동할 수 있다. 그 공격을 무효로 한다. 그 후, 이 카드는 효과 몬스터(악마족 / 빛 / 레벨 1 / 공 0 / 수 0)가 되고, 몬스터 존에 특수 소환한다. 이 카드는 함정 카드로도 취급한다. ②: 이 카드의 효과로 이 카드가 특수 소환되어 있을 경우, 자신 스탠바이 페이즈에 자신 묘지에서 "유토피아" 몬스터를 임의의 수만큼 제외하고 발동할 수 있다(같은 이름의 카드는 1장까지). 제외한 수 × 500 데미지를 상대에게 주고, 그 데미지의 수치만큼만 이 카드의 공격력을 올린다.
   zh-TW:
   zh-CN: |-
-    ①：对方怪兽的直接攻击宣言时才能把这张卡发动。那次攻击无效。那之后，这张卡变成效果怪兽（恶魔族·光·1星·攻/守0）在怪兽区域特殊召唤。这张卡也当作陷阱卡使用。
-    ②：这张卡的效果让这张卡已特殊召唤的场合，自己准备阶段把自己墓地的「希望皇霍普」怪兽任意数量除外才能发动（同名卡最多1张）。给与对方除外数量×500伤害，这张卡的攻击力上升那次伤害的数值。
+    ①：对手怪兽的直接攻击宣言时可以发动此卡。将该攻击无效。然后，此卡变为效果怪兽（恶魔族・光・星1・攻／守0），特殊召唤至怪兽区域。此卡也视为陷阱卡。②：此卡是以此卡的效果被特殊召唤的情况下，在自己准备阶段从自己的墓地将任意数量的"希望皇霍普"怪兽除外可以发动（同名卡最多1张）。给予对手相当于除外数量×500的数值的伤害，此卡的攻击力上升相当于该伤害的数值。
 card_type: Trap
 property: Continuous
 series:
@@ -82,6 +81,11 @@ sets:
     rarities:
     - Common
   - set_number: SD42-KR038
+    set_name: 'Structure Deck: Overlay Universe'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SD42-SC038
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
     - Common
