--- a/data/rush/18397.yaml
+++ b/data/rush/18397.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>亜<rt>あ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>地<rt>じ</rt></ruby><ruby>獄<rt>こく</rt></ruby>
-  ja_romaji: Aryūjikoku
+  ja: <ruby>亜<rt>あ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>地<rt>じ</rt></ruby><ruby>獄<rt>ごく</rt></ruby>
+  ja_romaji: Aryūjigoku
   ko:
   ko_rr:
   zh-TW:
