--- a/data/cards/yugipedia913482.yaml
+++ b/data/cards/yugipedia913482.yaml
@@ -42,7 +42,7 @@ sets:
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-EN000
+  - set_number: PHHY-EN0??
     set_name: Photon Hypernova
     rarities:
   de:
@@ -50,7 +50,7 @@ sets:
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-DE000
+  - set_number: PHHY-DE0??
     set_name: Photon Hypernova
     rarities:
   fr:
@@ -58,7 +58,7 @@ sets:
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-FR000
+  - set_number: PHHY-FR0??
     set_name: Photon Hypernova
     rarities:
   it:
@@ -66,7 +66,7 @@ sets:
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-IT000
+  - set_number: PHHY-IT0??
     set_name: Photon Hypernova
     rarities:
   pt:
@@ -74,7 +74,7 @@ sets:
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-PT000
+  - set_number: PHHY-PT0??
     set_name: Photon Hypernova
     rarities:
 limit_regulation:
