--- a/rush.yaml
+++ b/rush.yaml
@@ -39102,7 +39102,7 @@ name:
   it:
   pt:
   ja: <ruby>永<rt>えい</rt></ruby><ruby>久<rt>きゅう</rt></ruby><ruby>凍<rt>とう</rt></ruby><ruby>結<rt>けつ</rt></ruby>
-  ja_romaji: Eikyū Tōketsu
+  ja_romaji: Eikyūtōketsu
   ko: 영구동결
   ko_rr:
   zh-TW:
