--- a/data/cards/13179234.yaml
+++ b/data/cards/13179234.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>VV<rt>밸리언츠＝워</rt></ruby>~시작의 땅~
   ko_rr: Baellieoncheu Wo - Sijak-ui Ddang
   zh-TW:
-  zh-CN: 群豪大战～初始之地～
+  zh-CN: 弈勇战争～起始之地～
 text:
   en: |-
     Add 1 "Vaylantz" Field Spell from your Deck to your hand, then you can apply the following effect.
@@ -44,7 +44,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 덱에서 "밸리언츠" 필드 마법 카드 1장을 패에 넣는다. 그 후, 이하의 효과를 적용할 수 있다. ●자신 필드의 펜듈럼 몬스터 카드 1장을 골라 파괴하고, 덱에서 "포지션 체인지" 1장을 패에 넣는다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 엑스트라 덱에서 앞면 표시의 "밸리언츠" 펜듈럼 몬스터 1장을 고르고 자신의 펜듈럼 존에 놓는다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：从卡组将1张「ヴァリアンツ／群豪」场地魔法卡加入手牌。那之后，可以适用以下的效果。●选自己场上的1张灵摆怪兽卡破坏，从卡组将1张「ポジション・チェンジ／位置移动」加入手牌。②：可以将墓地的这张卡除外发动。从自己的额外卡组选1只表侧表示的「ヴァリアンツ／群豪」灵摆怪兽放置到自己的灵摆区。这个效果在这张卡送入墓地的回合不能发动。
+    此卡名的①②效果1回合仅可各使用1次。①：从牌组将1张"弈勇"场地魔法卡加入手牌。然后，可以适用以下效果。●挑选自己场上的1张灵摆怪兽卡破坏，从牌组将1张"位置移动"加入手牌。②：将墓地的此卡除外可以发动。从自己的额外牌组挑选1只表侧表示的"弈勇"灵摆怪兽，放在自己的灵摆区域。此效果在此卡被送至墓地的回合不可发动。
 card_type: Spell
 property: Normal
 series:
@@ -95,6 +95,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DBTM-SC011
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
