--- a/data/cards/53025096.yaml
+++ b/data/cards/53025096.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 전투로 상대 몬스터를 파괴하고 묘지로 보냈을 경우에 발동한다. 그 몬스터의 원래 공격력의 절반의 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡战斗破坏对方怪兽送去墓地的场合发动。给与对方那只怪兽的原本攻击力一半数值的伤害。
+    ①：此卡战斗破坏对手怪兽并将其送至墓地的情况下发动。给予对手相当于该怪兽原本攻击力一半数值的伤害。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -117,6 +117,11 @@ sets:
     set_name: 'Duelist Entry Deck VS: Saber Force'
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD29-SC014
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
