--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -3034,6 +3034,18 @@
   ko_rr:
   zh-TW: LV
   zh-CN:
+- en: Gold Pride
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: True Draco
   de: Wahre Dracho
   es: Verdadero/a Draco
