--- a/data/cards/90330453.yaml
+++ b/data/cards/90330453.yaml
@@ -47,6 +47,21 @@ sets:
     set_name: Duelist League Series 9 participation card
     rarities:
     - Super Rare
+  de:
+  - set_number: DL9-DE001
+    set_name: Duelist League Series 9 participation card
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: DL9-FR001
+    set_name: Duelist League Series 9 participation card
+    rarities:
+    - Super Rare
+  it:
+  - set_number: DL9-IT001
+    set_name: Duelist League Series 9 participation card
+    rarities:
+    - Super Rare
   ja:
   - set_number: ''
     set_name: Booster 6
