--- a/data/cards/13291886.yaml
+++ b/data/cards/13291886.yaml
@@ -12,7 +12,7 @@ name:
   ko: 밸리언츠<ruby>D<rt>도미네이터</rt></ruby>－듀크
   ko_rr: Baellieoncheudomineiteo - Dyukeu
   zh-TW:
-  zh-CN: 群豪之统治者-公爵
+  zh-CN: 弈勇－支配者公爵
 text:
   en: |-
     You can target 1 Set card in the Spell & Trap Zone; that Set card cannot be activated this turn (even if this card leaves the field). If this card in the Monster Zone moves to another Monster Zone: You can target 1 face-up monster in your opponent's Main Monster Zone; take control of that face-up monster, but it cannot declare an attack nor activate its effects, also it is treated as a "Vaylantz" monster. You can only use each effect of "Vaylantz Dominator Duke" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 몬스터 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 마법 & 함정 존에 세트된 카드 1장을 대상으로 하고 발동할 수 있다. 세트된 그 카드는 이 턴에 발동할 수 없다. ②: 몬스터 존의 이 카드가 다른 몬스터 존으로 이동했을 경우, 상대 메인 몬스터 존의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 앞면 표시 몬스터의 컨트롤을 얻는다. 이 효과로 컨트롤을 얻은 몬스터는, 공격 선언할 수 없으며, 효과를 발동할 수 없고, "밸리언츠" 몬스터로도 취급한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②怪兽效果1回合各能使用1次。①：可以以魔法陷阱区盖放的1张卡为对象发动。盖放的那张卡在这个回合不能发动。②：怪兽区的这张卡被移动到其他的怪兽区的场合，可以以对手的主要怪兽区的1只表侧表示怪兽为对象发动。得到那只表侧表示怪兽的操作权。用这个效果得到操作权的怪兽不能攻击宣言，不能发动效果，也当作「ヴァリアンツ／群豪」怪兽使用。
+    此卡名的①②怪兽效果1回合仅可各使用1次。①：以1张被放置在魔法与陷阱区域的卡为对象可以发动。被放置的该卡在此回合不可发动。②：怪兽区域的此卡移动至其他怪兽区域的情况下，以对手主要怪兽区域的1只表侧表示怪兽为对象可以发动。获得该表侧表示怪兽的控制权。以此效果获得控制权的怪兽不可攻击宣言，不可发动效果，也视为"弈勇"怪兽。
 card_type: Monster
 monster_type_line: Machine / Pendulum / Effect
 attribute: FIRE
@@ -59,7 +59,7 @@ pendulum_effect:
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드 존에 "VV(밸리언츠＝월드)－쾨니히 비센"이 존재할 경우, 또는 자신 필드에 화염 속성의 "밸리언츠" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 정면의 자신 메인 몬스터 존에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的灵摆效果1回合只能使用1次。①：场地区有「VV－百識公国／群豪世界-百识公国」存在的场合，或者自己场上有炎属性的「ヴァリアンツ／群豪」怪兽存在的场合可以发动。将这张卡特殊召唤到正对面的自己的主要怪兽区。
+    此卡名的灵摆效果1回合仅可使用1次。①：场地区域有"弈勇世界－百识公国"存在的情况下，或自己场上有炎属性的"弈勇"怪兽存在的情况下可以发动。将此卡特殊召唤至正面的自己的主要怪兽区域。
 series:
 - Vaylantz
 images:
@@ -103,6 +103,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DBTM-SC008
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
