--- a/data/cards/33296432.yaml
+++ b/data/cards/33296432.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래그마의 천계 아딘
   ko_rr: Deuraegeuma-ui Cheon-gye Adin
   zh-TW:
-  zh-CN: 教导的天启 阿东
+  zh-CN: 教导之天启 亚丁
 text:
   en: |-
     Cannot be destroyed by battle with a monster Special Summoned from the Extra Deck. You can only use each of the following effects of "Dogmatika Adin, the Enlightened" once per turn. If a monster Special Summoned from the Extra Deck is on the field: You can Special Summon this card from your hand. If this card on the field is destroyed by battle or card effect: You can Special Summon 1 "Dogmatika" monster from your Deck, except "Dogmatika Adin, the Enlightened".
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 엑스트라 덱에서 특수 소환된 몬스터가 필드에 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드는 엑스트라 덱에서 특수 소환된 몬스터와의 전투로는 파괴되지 않는다. ③: 필드의 이 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "드래그마의 천계 아딘" 이외의 "드래그마" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①③的效果1回合各能使用1次。
-    ①：从额外卡组特殊召唤的怪兽在场上存在的场合才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡不会被和从额外卡组特殊召唤的怪兽的战斗破坏。
-    ③：场上的这张卡被战斗·效果破坏的场合才能发动。从卡组把「教导的天启 阿东」以外的1只「教导」怪兽特殊召唤。
+    此卡名的①③效果１回合仅可各使用１次。①：场上有被从额外牌组特殊召唤的怪兽存在的情况下可以发动。从手牌将此卡特殊召唤。②：此卡不会因与从额外牌组中被特殊召唤的怪兽的战斗而被破坏。③：场上的此卡因战斗・效果被破坏的情况下可以发动。从牌组将１只“教导之天启 亚丁”以外的“教导”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -101,6 +98,11 @@ sets:
   ko:
   - set_number: ROTD-KR007
     set_name: Rise of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP5-SC007
+    set_name: Mega Pack 05
     rarities:
     - Common
 limit_regulation:
