--- a/data/cards/96891787.yaml
+++ b/data/cards/96891787.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래그마의 철퇴 테오
   ko_rr: Deuraegeuma-ui Cheoltoe Teo
   zh-TW:
-  zh-CN: 教导的铁锤 特奥
+  zh-CN: 教导之铁槌 提奥
 text:
   en: |-
     Cannot be destroyed by battle with a monster Special Summoned from the Extra Deck. You can only use each of the following effects of "Dogmatika Theo, the Iron Punch" once per turn. If a monster Special Summoned from the Extra Deck is on the field: You can Special Summon this card from your hand. You can target 1 face-up monster on the field that was Special Summoned from the Extra Deck; until the end of this turn, this card gains 600 ATK, and if it does, the targeted monster loses 600 ATK.
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 엑스트라 덱에서 특수 소환된 몬스터가 필드에 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드는 엑스트라 덱에서 특수 소환된 몬스터와의 전투로는 파괴되지 않는다. ③: 엑스트라 덱에서 특수 소환된 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 턴 종료시까지, 이 카드의 공격력은 600 올리고, 대상 몬스터의 공격력은 600 내린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①③的效果1回合各能使用1次。
-    ①：从额外卡组特殊召唤的怪兽在场上存在的场合才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡不会被和从额外卡组特殊召唤的怪兽的战斗破坏。
-    ③：以从额外卡组特殊召唤的场上1只表侧表示怪兽为对象才能发动。直到回合结束时，这张卡的攻击力上升600，作为对象的怪兽的攻击力下降600。
+    此卡名的①③效果１回合仅可各使用１次。①：场上有被从额外牌组特殊召唤的怪兽存在的情况下可以发动。从手牌将此卡特殊召唤。②：此卡不会因与从额外牌组中被特殊召唤的怪兽的战斗而被破坏。③：以场上１只从额外牌组中被特殊召唤的表侧表示怪兽为对象可以发动。直至回合结束时为止，此卡的攻击力上升６００，对象怪兽的攻击力下降６００。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -101,6 +98,11 @@ sets:
   ko:
   - set_number: ROTD-KR006
     set_name: Rise of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP5-SC006
+    set_name: Mega Pack 05
     rarities:
     - Common
 limit_regulation:
