--- a/data/cards/26435595.yaml
+++ b/data/cards/26435595.yaml
@@ -9,7 +9,7 @@ name:
   pt: Patissciel Couverture
   ja: <ruby>聖菓使<rt>パティシエル</rt></ruby>クーベル
   ja_romaji: Patishieru Kūberu
-  ko:
+  ko: 파티시엘 쿠베르
   ko_rr:
   zh-TW:
   zh-CN:
@@ -35,7 +35,9 @@ text:
   ja: |-
     Ｐモンスター×２
     ①：モンスターゾーンのこのカードが破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
-  ko:
+  ko: |-
+    펜듈럼 몬스터 × 2
+    ①: 몬스터 존의 이 카드가 파괴되었을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -60,7 +62,8 @@ pendulum_effect:
     Se você não tiver cards na sua outra Zona de Pêndulo: você pode colocar 1 Monstro Pêndulo com a face para cima do seu Deck Adicional na sua Zona de Pêndulo. Você só pode usar este efeito de "Patissciel Couverture" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：もう片方の自分のＰゾーンにカードが存在しない場合に発動できる。自分のＥＸデッキから表側表示のＰモンスター１体を選んで自分のＰゾーンに置く。
-  ko:
+  ko: |-
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 다른 한쪽 자신의 펜듈럼 존에 카드가 존재하지 않을 경우에 발동할 수 있다. 자신의 엑스트라 덱에서 앞면 표시의 펜듈럼 몬스터 1장을 고르고 자신의 펜듈럼 존에 놓는다.
   zh-TW:
   zh-CN:
 materials: 2 Pendulum Monsters
