--- a/data/cards/04206964.yaml
+++ b/data/cards/04206964.yaml
@@ -594,6 +594,10 @@ sets:
     set_name: Speed Start Deck Synchro Edition
     rarities:
     - Common
+  - set_number: SD45-JP028
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
+    - Common
   ko:
   - set_number: LOB-K058
     set_name: Legend of Blue Eyes White Dragon
