--- a/data/cards/16223761.yaml
+++ b/data/cards/16223761.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: SD45-JP022
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
+    - Common
   ko:
   - set_number: ROTD-KR031
     set_name: Rise of the Duelist
