--- a/data/cards/98827725.yaml
+++ b/data/cards/98827725.yaml
@@ -119,6 +119,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collectors Rare
+  - set_number: SD45-JP035
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
+    - Common
   ko:
   - set_number: PP11-KR015
     set_name: Premium Pack Vol.11
