--- a/data/rush/17979.yaml
+++ b/data/rush/17979.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 17979
 name:
   en: Magician's Valkyria
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手はこのカード以外の表側表示モンスター（魔法使い族）に攻撃できない。
   ko:
   zh-TW:
   zh-CN:
