--- a/data/cards/53334471.yaml
+++ b/data/cards/53334471.yaml
@@ -153,6 +153,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SD45-JP038
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
+    - Common
   ko:
   - set_number: CSOC-KR079
     set_name: Crossroads of Chaos
