--- a/data/rush/17978.yaml
+++ b/data/rush/17978.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 17978
 name:
   en: Greystorm Reverie
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのこのカード以外のカード１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで５００アップする。お互いのフィールドに魔法・罠カードがない場合、さらにこのターン、このカードはモンスターに２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
