--- a/data/rush/17980.yaml
+++ b/data/rush/17980.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 17980
 name:
   en: Heavy Storm
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    お互いのフィールドの魔法・罠カードを全て破壊する。
   ko:
   zh-TW:
   zh-CN:
