--- a/data/cards/03734202.yaml
+++ b/data/cards/03734202.yaml
@@ -113,6 +113,7 @@ sets:
   - set_number: SD45-JP037
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: NECH-KR076
     set_name: The New Challengers
