--- a/data/cards/12580477.yaml
+++ b/data/cards/12580477.yaml
@@ -330,6 +330,7 @@ sets:
   - set_number: SD45-JP025
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: LOB-K053
     set_name: Legend of Blue Eyes White Dragon
