--- a/data/cards/23434538.yaml
+++ b/data/cards/23434538.yaml
@@ -208,6 +208,7 @@ sets:
   - set_number: SD45-JP014
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: EXP4-KR037
     set_name: Extra Pack Volume 4
