--- a/data/cards/28201945.yaml
+++ b/data/cards/28201945.yaml
@@ -122,6 +122,7 @@ sets:
   - set_number: SD45-JP005
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: JOTL-KR034
     set_name: Judgment of the Light
