--- a/data/cards/28692962.yaml
+++ b/data/cards/28692962.yaml
@@ -99,6 +99,7 @@ sets:
   - set_number: SD45-JP017
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: EXFO-KR020
     set_name: Extreme Force
