--- a/data/cards/29616929.yaml
+++ b/data/cards/29616929.yaml
@@ -182,6 +182,8 @@ sets:
   - set_number: SD45-JP031
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: JOTL-KR077
     set_name: Judgment of the Light
