--- a/data/cards/46502744.yaml
+++ b/data/cards/46502744.yaml
@@ -147,6 +147,7 @@ sets:
   - set_number: SD45-JP011
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: CORE-KR045
     set_name: Clash of Rebellions
