--- a/data/cards/48686504.yaml
+++ b/data/cards/48686504.yaml
@@ -239,6 +239,7 @@ sets:
   - set_number: SD45-JP013
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: EXP1-KR031
     set_name: Extra Pack
