--- a/data/cards/51976476.yaml
+++ b/data/cards/51976476.yaml
@@ -39,7 +39,11 @@ series:
 - Trap Hole
 images:
 - index: 1
+  image: DoubleTrapHole-SECE-JP-NR.png
+  illustration: DoubleTrapHole-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DoubleTrapHole-SECE-EN-SP-1E.png
+  illustration: DoubleTrapHole-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SECE-EN080
