--- a/data/cards/69599136.yaml
+++ b/data/cards/69599136.yaml
@@ -188,6 +188,7 @@ sets:
   - set_number: SD45-JP032
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: TDIL-KR076
     set_name: The Dark Illusion
