--- a/data/cards/80101899.yaml
+++ b/data/cards/80101899.yaml
@@ -188,6 +188,7 @@ sets:
   - set_number: SD45-JP034
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: SOFU-KR078
     set_name: Soul Fusion
