--- a/data/cards/85103922.yaml
+++ b/data/cards/85103922.yaml
@@ -122,6 +122,7 @@ sets:
   - set_number: SD45-JP019
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: PRIO-KR011
     set_name: Primal Origin
