--- a/data/cards/01005587.yaml
+++ b/data/cards/01005587.yaml
@@ -100,6 +100,7 @@ sets:
   - set_number: SD45-JP030
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: REDU-KR076
     set_name: Return of the Duelist
