--- a/data/cards/12444060.yaml
+++ b/data/cards/12444060.yaml
@@ -147,6 +147,7 @@ sets:
   - set_number: SD45-JP036
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: PRIO-KR072
     set_name: Primal Origin
