--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -288,6 +288,7 @@ sets:
   - set_number: SD45-JP026
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: PP01-KR021
     set_name: Premium Pack Vol.1
