--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -100,6 +100,6 @@ sets:
     - Secret Rare
     - Ultimate Rare
 limit_regulation:
-  tcg: Forbidden
+  tcg: Unlimited
   ocg: Forbidden
 yugipedia_page_id: 383499
