--- a/data/cards/55428242.yaml
+++ b/data/cards/55428242.yaml
@@ -122,6 +122,7 @@ sets:
   - set_number: SD45-JP003
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Common
   ko:
   - set_number: JOTL-KR032
     set_name: Judgment of the Light
