--- a/data/cards/76375976.yaml
+++ b/data/cards/76375976.yaml
@@ -123,6 +123,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 588953
