--- a/data/cards/91812341.yaml
+++ b/data/cards/91812341.yaml
@@ -167,6 +167,7 @@ sets:
   - set_number: SD45-JP004
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: JOTL-KR033
     set_name: Judgment of the Light
