--- a/data/cards/98095162.yaml
+++ b/data/cards/98095162.yaml
@@ -111,6 +111,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 545763
