--- a/data/cards/yugipedia905093.yaml
+++ b/data/cards/yugipedia905093.yaml
@@ -41,6 +41,7 @@ sets:
   - set_number: SD45-JP002
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
