--- a/data/cards/yugipedia905107.yaml
+++ b/data/cards/yugipedia905107.yaml
@@ -37,6 +37,7 @@ sets:
   - set_number: SD45-JP027
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
