--- a/data/cards/yugipedia910925.yaml
+++ b/data/cards/yugipedia910925.yaml
@@ -42,6 +42,7 @@ sets:
   - set_number: SD45-JP001
     set_name: 'Structure Deck: Forest of the Traptrix'
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
