--- a/rush.yaml
+++ b/rush.yaml
@@ -84468,3 +84468,47 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 913101
+---
+konami_id:
+name:
+  en: Hacking Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハッキング・ドラゴン
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 7
+atk: 2300
+def: 2000
+series:
+- High Tech Dragon
+images:
+- index: 1
+  image: HackingDragon-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP023
+    set_name: Saikyō Jump February 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 913611
