--- a/data/rush/18463.yaml
+++ b/data/rush/18463.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18463
 name:
   en: Cyber Search Dragon
   de:
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは表側表示の「サイバー・ドラゴン」１体をリリースして攻撃表示でアドバンス召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに、手札１枚をデッキの上に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「サイバー・ドラゴン」１体を選び、自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
