--- a/data/cards/76075139.yaml
+++ b/data/cards/76075139.yaml
@@ -12,7 +12,7 @@ name:
   ko: 밸리언츠<ruby>G<rt>제네시스</rt></ruby>－그랑듀크
   ko_rr: Baellieoncheujenesiseu - Geurangdyukeu
   zh-TW:
-  zh-CN: 群豪之创始者-大公
+  zh-CN: 弈勇－创世大公
 text:
   en: |-
     2 "Vaylantz" monsters
@@ -40,8 +40,8 @@ text:
     엑스트라 덱의 뒷면 표시의 이 카드는, 융합 소환 및 이하의 방법으로만 특수 소환할 수 있다. ●융합 몬스터가 아닌, 엑스트라 몬스터 존과 같은 세로열인 자신의 레벨 5 이상의 "밸리언츠" 몬스터 1장을 릴리스했을 경우에 특수 소환할 수 있다. ①: 이 카드가 특수 소환에 성공했을 경우, 상대의 마법 & 함정 존의 몬스터 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 패로 되돌리고, 그 공격력만큼의 데미지를 상대에게 준다. 그 후, 준 데미지의 절반만큼 이 카드의 공격력을 올린다.
   zh-TW:
   zh-CN: |-
-    「ヴァリアンツ／群豪」怪兽×2
-    额外卡组的里侧表示的这张卡只有用融合召唤以及以下的方法才能特殊召唤。●将除融合怪兽以外的、与额外怪兽区相同纵列的自己的等级5以上的1只「ヴァリアンツ／群豪」怪兽解放的场合可以特殊召唤。①：这张卡特殊召唤成功的场合，可以以对手的魔法陷阱区的1张怪兽卡为对象发动。使那张卡返回持有者的手牌，给予对手其攻击力数值的伤害。那之后，这张卡的攻击力上升给予的伤害的一半数值。
+    "弈勇"怪兽×2
+    额外牌组里侧表示的此卡仅可以融合召唤及以下方法特殊召唤。●解放1只除了融合怪兽以外的、与额外怪兽区域同一纵列的自己的等级5以上的"弈勇"怪兽的情况下可以特殊召唤。①：此卡特殊召唤成功的情况下，以对手魔法与陷阱区域的1张怪兽卡为对象可以发动。将该卡放回持有者的手牌，给予对手相当于其攻击力数值的伤害。然后，此卡的攻击力上升相当于给予的伤害数值一半的数值。
 card_type: Monster
 monster_type_line: Machine / Fusion / Pendulum / Effect
 attribute: FIRE
@@ -86,7 +86,7 @@ pendulum_effect:
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이하의 효과에서 1개를 선택하고 발동할 수 있다. ●이 카드를 정면의 자신 메인 몬스터 존에 특수 소환한다. ●자신 메인 몬스터 존의 몬스터 1장을 고르고, 그 위치를 그 옆의 몬스터 존으로 이동한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的灵摆效果1回合只能使用1次。①：可以从以下的效果中选择1个发动。●将这张卡特殊召唤到正对面的自己的主要怪兽区。●选自己的主要怪兽区的1只怪兽，将其位置移动到其相邻的怪兽区。
+    此卡名的灵摆效果1回合仅可使用1次。①：可从以下效果中选择1个发动。●将此卡特殊召唤至正面的自己主要怪兽区域。●挑选1只自己主要怪兽区域的怪兽，将其位置移动至其相邻的怪兽区域。
 materials: 2 "Vaylantz" monsters
 series:
 - Vaylantz
@@ -126,6 +126,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR010
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC010
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
