--- a/data/rush/18307.yaml
+++ b/data/rush/18307.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18307
 name:
   en: Galactica Reminiscence
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の罠カード１枚をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの全ての表側表示モンスター（ギャラクシー族）の攻撃力をターン終了時まで４００アップする。自分フィールドに表側表示の「ギャラクティカ・オブリビオン」がいる場合、さらに相手フィールドの全ての表側表示モンスターの攻撃力をターン終了時まで１０００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
