--- a/data/cards/34456146.yaml
+++ b/data/cards/34456146.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18449
+password: 34456146
 name:
   en: Love Magus - Ciela
   de:
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名はルール上「閃刀」カードとしても扱う。このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：手札から魔法カード１枚を捨てて発動できる。このカードを手札から特殊召喚する。②：自分の墓地から魔法カード１枚を除外して発動できる。このカードのコントロールを相手に移し、自分の墓地から「閃刀姫」モンスター１体を選んで特殊召喚する。③：このカードが戦闘・効果で破壊され墓地へ送られた場合、除外されている自分の「閃刀」魔法カード１枚を対象として発動できる。そのカードを手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -36,7 +37,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: LoveMagusCiela-YOS1-JP-OP.png
+  image: LoveMagusCiela-YOS1-JP-UR.png
 sets:
   ja:
   - set_number: YOS1-JP001
@@ -45,5 +46,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 911925
