--- a/data/rush/17980.yaml
+++ b/data/rush/17980.yaml
@@ -43,7 +43,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: HeavyStorm-RDG002-JP-OP.png
+  image: HeavyStorm-RDG002-JP-ScR.png
 sets:
   ja:
   - set_number: RD/G002-JP003
