--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -237,7 +237,7 @@
   ko: <ruby>EM<rt>엔터메이트</rt></ruby>
   ko_rr: Enteomeiteu
   zh-TW:
-  zh-CN:
+  zh-CN: 娱乐伙伴
 - en: Neo Space
   de: Neoraum
   es: Neo Espace
@@ -1341,7 +1341,7 @@
   ko: <ruby>ko<rt>Em</rt></ruby>
   ko_rr: Enteomeiji
   zh-TW:
-  zh-CN:
+  zh-CN: 娱乐巫师
 - en: Phantom Beast
   de: Phantomungeheuer
   es: Bestia Fantasma
