--- a/data/cards/45803070.yaml
+++ b/data/cards/45803070.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Não é afetado pelos efeitos de Armadilhas Normais "Buraco". Quando este card for Invocado por Invocação-Normal: você pode escolher 1 monstro "Armadilhatrix" no seu Cemitério; Invoque o alvo por Invocação-Especial em Posição de Defesa. Quando este card for Invocado por Invocação-Especial: você pode escolher 1 Armadilha Normal "Buraco" no seu Cemitério; Baixe o alvo, mas bana-o durante a Fase Final do seu próximo turno se ele ainda estiver no campo. Você só pode usar este efeito de "Armadilhatrix Dioneia" uma vez por turno.
   ja: |-
-    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが召喚に成功した時、自分の墓地の「蟲惑魔」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。②：このカードが特殊召喚に成功した時、自分の墓地の「ホール」通常罠カードまたは「落とし穴」通常罠カード１枚を対象として発動できる。そのカードを自分フィールドにセットする。セットしたカードは次の自分ターンのエンドフェイズに除外される。③：このカードは「ホール」通常罠カード及び「落とし穴」通常罠カードの効果を受けない。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが召喚に成功した時、自分の墓地の「蟲惑魔」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。②：このカードが特殊召喚に成功した時、自分の墓地の「ホール」通常罠カードまたは「落とし穴」通常罠カード１枚を対象として発動できる。そのカードを自分フィールドにセットする。そのカードは次の自分ターンのエンドフェイズに除外される。③：このカードは「ホール」通常罠カード及び「落とし穴」通常罠カードの効果を受けない。
   ko: |-
-    이 카드는 "홀" 또는 "함정 속으로"라는 이름이 붙은 일반 함정 카드의 효과를 받지 않는다. 이 카드가 일반 소환에 성공했을 때, 자신의 묘지에서 "충혹마"라는 이름이 붙은 몬스터 1장을 선택하고 앞면 수비 표시로 특수 소환할 수 있다. 또한, 이 카드가 특수 소환에 성공했을 때, 자신 묘지의 "홀" 또는 "함정 속으로"라는 이름이 붙은 일반 함정 카드 1장을 선택하고 자신 필드 위에 세트할 수 있다. 이 효과로 세트된 카드는, 다음 자신 턴의 엔드 페이즈시에 제외된다. "티오의 충혹마"의 이 효과는 1턴에 1번밖에 발동할 수 없다.
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 "충혹마" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다. ②: 이 카드가 특수 소환에 성공했을 때, 자신 묘지의 "홀" 일반 함정 카드 또는 "함정 속으로" 일반 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 자신 필드에 세트한다. 세트한 카드는 다음 자신 턴의 엔드 페이즈에 제외된다. ③: 이 카드는 "홀" 일반 함정 카드 및 "함정 속으로" 일반 함정 카드의 효과를 받지 않는다.
   zh-TW:
   zh-CN: |-
-    此卡名的②效果1回合仅可使用1次。①：此卡召唤成功时，以自己墓地的1只"虫惑魔"怪兽为对象可以发动。以守备表示形式将该怪兽特殊召唤。②：此卡特殊召唤成功时，以自己墓地的1张"空洞"通常陷阱卡或"落穴"通常陷阱卡为对象可以发动。将该卡放置在自己场上。放置的卡将在下一个自己回合的结束阶段被除外。③：此卡不受"空洞"通常陷阱卡及"落穴"通常陷阱卡的效果影响。
+    此卡名的②效果１回合仅可使用１次。①：此卡召唤成功时，以自己墓地的１只“虫惑魔”怪兽为对象可以发动。以守备表示形式将该怪兽特殊召唤。②：此卡特殊召唤成功时，以自己墓地的１张“空洞”通常陷阱卡或“落穴”通常陷阱卡为对象可以发动。将该卡放置在自己场上。放置的卡将在下一个自己回合的结束阶段被除外。③：此卡不受“空洞”通常陷阱卡及“落穴”通常陷阱卡的效果影响。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: EARTH
