--- a/data/cards/11050415.yaml
+++ b/data/cards/11050415.yaml
@@ -12,7 +12,7 @@ name:
   ko: 초히포 카니발
   ko_rr:
   zh-TW:
-  zh-CN: 超河马狂欢节
+  zh-CN: 超河马嘉年华
 text:
   en: |-
     Special Summon 1 "Performapal Hip Hippo" from your hand, Deck, or Graveyard, then you can Special Summon as many "Hippo Tokens" (Beast-Type/EARTH/Level 1/ATK 0/DEF 0) as possible, but they cannot be Tributed, and monsters your opponent controls cannot target monsters for attacks for the rest of this turn, except "Hippo Tokens". You cannot Special Summon monsters from the Extra Deck while a "Hippo Token" is in a Monster Zone.
@@ -32,7 +32,7 @@ text:
     ①: 자신의 패 / 덱 / 묘지에서 "EM(엔터메이트) 디스커버 히포" 1장을 고르고 특수 소환한다. 그 후, 자신 필드에 "히포 토큰"(야수족 / 땅 / 레벨 1 / 공 0 / 수 0)을 가능한 한 특수 소환할 수 있다. 이 토큰은 릴리스할 수 없다. "히포 토큰"이 몬스터 존에 존재하는 한, 자신은 엑스트라 덱에서 몬스터를 특수 소환할 수 없다. 이 효과로 "히포 토큰"을 특수 소환했을 경우, 턴 종료시까지 상대는 "히포 토큰" 이외의 몬스터를 공격 대상으로 할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：从自己的手卡·卡组·墓地选1只「娱乐伙伴 探寻河马」特殊召唤。那之后，可以在自己场上把「河马衍生物」（兽族·地·1星·攻/守0）尽可能特殊召唤。这衍生物不能解放。只要「河马衍生物」在怪兽区域存在，自己不能从额外卡组把怪兽特殊召唤。这个效果把「河马衍生物」特殊召唤的场合，直到回合结束时对方不能把「河马衍生物」以外的怪兽作为攻击对象。
+    ①：从自己的手牌・牌组・墓地挑选1只"娱乐伙伴 探索河马"特殊召唤。然后，可将"河马衍生物"（兽族・地・星1·攻／守0）尽可能多地特殊召唤至自己场上。此衍生物不可解放。只要"河马衍生物"存在于怪兽区域，自己不可从额外牌组特殊召唤怪兽。以此效果特殊召唤了"河马衍生物"的情况下，直至回合结束时为止，对手不可将"河马衍生物"以外的怪兽作为攻击对象。
 card_type: Spell
 property: Quick-Play
 images:
@@ -94,6 +94,11 @@ sets:
     set_name: The Dark Illusion
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SD29-SC030
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
