--- a/data/cards/23434538.yaml
+++ b/data/cards/23434538.yaml
@@ -27,13 +27,14 @@ text:
   pt: |-
     Durante o turno de qualquer duelista: você pode enviar este card da sua mão para o Cemitério; neste turno, sempre que seu oponente Invocar um ou mais monstros por Invocação-Especial, imediatamente compre 1 card. Você só pode usar 1 ""C" Maxx" por turno.
   ja: |-
-    このカード名の効果は１ターンに１度しか使用できず、相手ターンでも発動できる。①：このカードを手札から墓地へ送って発動できる。このターン、以下の効果を適用する。●相手がモンスターの特殊召喚に成功する度に、自分はデッキから１枚ドローしなければならない。
+    このカード名の効果は１ターンに１度しか使用できず、相手ターンでも発動できる。①：このカードを手札から墓地へ送って発動できる。このターン、以下の効果を適用する。●相手がモンスターの特殊召喚に成功する度に、自分はデッキから１枚ドローする。
   ko: |-
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없으며, 상대 턴에도 발동할 수 있다. ①: 이 카드를 패에서 묘지로 보내고 발동할 수 있다. 이 턴에, 이하의 효과를 적용한다. ●상대가 몬스터의 특수 소환에 성공할 때마다, 자신은 덱에서 1장 드로우해야 한다.
   zh-TW: |-
     可將此卡從手牌送入墓地進行發動。此回合每當對手成功特殊召喚怪獸時，我方從牌組抽1張卡牌。此效果在對手回合也可以發動。「增殖的Z」1個回合只能發動1次。
   zh-CN: |-
-    此卡名的效果1回合仅可使用1次，在对手回合中也可以发动。①：将此卡从手牌送至墓地可以发动。此回合适用以下效果。●对手每次特殊召唤怪兽成功，自己必须从牌组抽1张。
+    此卡名的效果1回合仅可使用1次，在对手回合中也可以发动。①：将此卡从手牌送至墓地可以发动。此回合适用以下效果。
+    ●对手每次特殊召唤怪兽成功，自己必须从牌组抽1张。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: EARTH
