--- a/data/cards/28201945.yaml
+++ b/data/cards/28201945.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 몬스터 존에 존재하는 한, "홀" 일반 함정 카드 및 "함정 속으로" 일반 함정 카드의 효과를 받지 않는다. ②: 자신이 "홀" 일반 함정 카드 또는 "함정 속으로" 일반 함정 카드를 발동했을 경우에 발동할 수 있다. 덱에서 "카즈라의 충혹마" 이외의 "충혹마" 몬스터 1장을 고르고, 패에 넣거나 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的②效果1回合仅可使用1次。①：此卡只要存在于怪兽区域，不受"空洞"通常陷阱卡及"落穴"通常陷阱卡的效果影响。②：自己发动"空洞"通常陷阱卡或"落穴"通常陷阱卡的情况下可以发动。从牌组挑选"蜜笼之虫惑魔"以外的1只"虫惑魔"怪兽，加入手牌或特殊召唤。
+    此卡名的②效果１回合仅可使用１次。①：此卡只要存在于怪兽区域，不受“空洞”通常陷阱卡及“落穴”通常陷阱卡的效果影响。②：自己发动“空洞”通常陷阱卡或“落穴”通常陷阱卡的情况下可以发动。从牌组挑选“蜜笼之虫惑魔”以外的１只“虫惑魔”怪兽，加入手牌或特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: EARTH
