--- a/data/cards/41440148.yaml
+++ b/data/cards/41440148.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>EM<rt>엔터메이트</rt></ruby> 디스커버 히포
   ko_rr:
   zh-TW:
-  zh-CN: 娱乐伙伴 探寻河马
+  zh-CN: 娱乐伙伴 探索河马
 text:
   en: |-
     After you Normal Summon this card, you can Tribute Summon 1 Level 7 or higher monster in face-up Attack Position during your Main Phase this turn, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.)
@@ -32,7 +32,7 @@ text:
     ① : 이 카드가 일반 소환에 성공한 턴에, 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에, 레벨 7 이상의 몬스터 1장을 앞면 표시로 어드밴스 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤成功的回合，自己在通常召唤外加上只有1次，自己主要阶段可以把1只7星以上的怪兽表侧攻击表示上级召唤。
+    ①：此卡召唤成功的回合，自己在通常召唤外仅可追加1次，在自己的主要阶段，将1只等级7以上怪兽以表侧攻击表示上级召唤。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: EARTH
@@ -171,6 +171,11 @@ sets:
     - Common
   - set_number: ST16-KR013
     set_name: Starter Deck 2016
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SD29-SC021
+    set_name: 'Structure Deck: Master of Pendulum'
     rarities:
     - Common
 limit_regulation:
