--- a/data/cards/49027020.yaml
+++ b/data/cards/49027020.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18308
+password: 49027020
 name:
   en: Traptrix Pudica
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚に成功した時に発動できる。デッキから「蟲惑の園」１枚を手札に加える。②：このカードが特殊召喚に成功した場合、相手フィールドの特殊召喚されたモンスター１体を対象として発動できる。そのモンスターを除外する。次のスタンバイフェイズに、相手は除外されている自身のモンスター１体を選んで特殊召喚できる。③：このカードはモンスターゾーンに存在する限り、「ホール」通常罠カード及び「落とし穴」通常罠カードの効果を受けない。
   ko:
   zh-TW:
   zh-CN:
@@ -36,7 +37,7 @@ series:
 - Field Searcher
 images:
 - index: 1
-  image: TraptrixPudica-SD45-JP-OP.png
+  image: TraptrixPudica-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP001
@@ -45,5 +46,5 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 910925
