--- a/data/cards/49568943.yaml
+++ b/data/cards/49568943.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>VV<rt>밸리언츠＝월드</rt></ruby>－진라만상
   ko_rr: Baellieoncheu Woldeu - Jinnamansang
   zh-TW:
-  zh-CN: 群豪世界-真罗万象
+  zh-CN: 弈勇世界－真罗万象
 text:
   en: |-
     When this card is activated: Place 1 "Vaylantz" Field Spell from your Deck face-up in your opponent's Field Zone, except "Vaylantz World - Shinra Bansho". If there are 2 cards in the Field Zones: The turn player can target 1 Monster Card in their own Spell & Trap Zone; they Special Summon that card to their own Main Monster Zone in its same column. The turn player can only use this effect of "Vaylantz World - Shinra Bansho" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 덱에서 "VV(밸리언츠＝월드)－진라만상" 이외의 "밸리언츠" 필드 마법 카드 1장을 상대의 필드 존에 앞면 표시로 놓는다. ②: 필드 존에 카드가 2장 있을 경우, 턴 플레이어는 자신의 마법 & 함정 존의 몬스터 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 그 정면의 자신 메인 몬스터 존에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②效果1回合只能使用1次。①：作为这张卡发动时的效果处理，可以从卡组将1张「VV－真羅万象／群豪世界-真罗万象」以外的「ヴァリアンツ／群豪」场地魔法卡以表侧表示放置到对手的场地区。②：场地区的卡有2张的场合，回合玩家可以以自身的魔法陷阱区的1张怪兽卡为对象发动。将那张卡特殊召唤到其正对面的自身的主要怪兽区。
+    此卡名的②效果1回合仅可使用1次。①：作为此卡发动时的效果处理，从牌组将1张"弈勇世界－真罗万象"以外的"弈勇"场地魔法卡以表侧表示放在对手的场地区域。②：场地区域有2张卡的情况下，回合玩家以自身魔法与陷阱区域的1张怪兽卡为对象可以发动。将该卡特殊召唤至其正面的自己主要怪兽区域。
 card_type: Spell
 property: Field
 series:
@@ -73,6 +73,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR012
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC012
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
