--- a/data/cards/55428242.yaml
+++ b/data/cards/55428242.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드는 몬스터 존에 존재하는 한, "홀" 일반 함정 카드 및 "함정 속으로" 일반 함정 카드의 효과를 받지 않는다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신은 "홀" 일반 함정 카드 및 "함정 속으로" 일반 함정 카드를 패에서 발동할 수 있다. ③: 이 카드가 몬스터 존에 존재하는 한, 자신의 일반 함정 카드의 발동 및 그 발동한 효과는 무효화되지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：此卡只要存在于怪兽区域，不受"空洞"通常陷阱卡及"落穴"通常陷阱卡的效果影响。②：只要此卡存在于怪兽区域，自己可从手牌发动"空洞"通常陷阱卡及"落穴"通常陷阱卡。③：只要此卡存在于怪兽区域，自己的通常陷阱卡的发动及其发动的效果不会被无效化。
+    ①：此卡只要存在于怪兽区域，不受“空洞”通常陷阱卡及“落穴”通常陷阱卡的效果影响。②：只要此卡存在于怪兽区域，自己可从手牌发动“空洞”通常陷阱卡及“落穴”通常陷阱卡。③：只要此卡存在于怪兽区域，自己的通常陷阱卡的发动及其发动的效果不会被无效化。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: EARTH
