--- a/data/cards/72378329.yaml
+++ b/data/cards/72378329.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비스트아이즈 펜듈럼 드래곤
   ko_rr: Biseuteu-aijeu Pendyulleom Deuraegon
   zh-TW:
-  zh-CN: 野兽眼灵摆龙
+  zh-CN: 猛兽眼灵摆龙
 text:
   en: |-
     1 DARK Dragon-Type monster + 1 Beast-Type monster
@@ -40,8 +40,8 @@ text:
     이 카드는 융합 소환 및 이하의 방법으로만 특수 소환할 수 있다. ●자신 필드의 상기 카드를 릴리스했을 경우에 엑스트라 덱에서 특수 소환할 수 있다("융합"은 필요로 하지 않는다). ①: 이 카드가 전투로 몬스터를 파괴했을 경우에 발동한다. 이 카드의 융합 소재로 한 야수족 몬스터 1장의 원래의 공격력 만큼의 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    龙族·暗属性怪兽＋兽族怪兽
-    这张卡用融合召唤以及以下方法才能特殊召唤。●把自己场上的上记卡解放的场合可以从额外卡组特殊召唤（不需要「融合」）。①：这张卡战斗破坏怪兽的场合发动。给与对方作为这张卡的融合素材的1只兽族怪兽的原本攻击力数值的伤害。
+    龙族・暗属性怪兽＋兽族怪兽
+    此卡仅可以融合召唤及以下方法特殊召唤。●解放自己场上的上述卡的情况下，可从额外牌组特殊召唤（无需"融合"）。①：此卡战斗破坏怪兽的情况下发动。给予对手作为此卡融合素材的1只兽族怪兽原本攻击力数值的伤害。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: EARTH
@@ -97,6 +97,11 @@ sets:
     - Normal Parallel Rare
   ko:
   - set_number: SD29-KR043
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD29-SC046
     set_name: 'Structure Deck: Master of Pendulum'
     rarities:
     - Normal Parallel Rare
