--- a/data/cards/75416738.yaml
+++ b/data/cards/75416738.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18309
+password: 75416738
 name:
   en: Traptrix Arachnocampa
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：自分フィールドに「蟲惑魔」モンスターが存在する場合、自分・相手のメインフェイズに発動できる。このカードを手札から特殊召喚する。この効果の発動後、ターン終了時まで自分は昆虫族・植物族モンスターしかＥＸデッキから特殊召喚できない。②：このカードはモンスターゾーンに存在する限り、「ホール」通常罠カード及び「落とし穴」通常罠カードの効果を受けない。③：自分の魔法＆罠ゾーンにセットされたカードはそれぞれ１ターンに１度だけ効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Traptrix
 images:
 - index: 1
-  image: TraptrixArachnocampa-SD45-JP-OP.png
+  image: TraptrixArachnocampa-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP002
@@ -44,5 +45,5 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905093
