--- a/data/cards/91812341.yaml
+++ b/data/cards/91812341.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 "홀" 일반 함정 카드 또는 "함정 속으로" 일반 함정 카드 1장을 패에 넣는다. ②: 이 카드가 특수 소환에 성공했을 경우, 상대 필드의 마법 / 함정 카드 1장을 대상으로 하고 발동한다. 그 상대의 카드를 파괴한다. ③: 이 카드는 몬스터 존에 존재하는 한, "홀" 일반 함정 카드 및 "함정 속으로" 일반 함정 카드의 효과를 받지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：此卡召唤成功时可以发动。从牌组将1张"空洞"通常陷阱卡或"落穴"通常陷阱卡加入手牌。②：此卡特殊召唤成功的情况下，以对手场上1张魔法・陷阱卡为对象发动。将该对手的卡破坏。③：此卡只要存在于怪兽区域，不受"空洞"通常陷阱卡及"落穴"通常陷阱卡的效果影响。
+    ①：此卡召唤成功时可以发动。从牌组将１张“空洞”通常陷阱卡或“落穴”通常陷阱卡加入手牌。②：此卡特殊召唤成功的情况下，以对手场上１张魔法・陷阱卡为对象发动。将该对手的卡破坏。③：此卡只要存在于怪兽区域，不受“空洞”通常陷阱卡及“落穴”通常陷阱卡的效果影响。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: EARTH
