--- a/data/cards/75294187.yaml
+++ b/data/cards/75294187.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18312
+password: 75294187
 name:
   en: Delusion Trap Hole
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：相手がモンスターの特殊召喚に成功したターン、相手フィールドの攻撃力２０００以上のモンスター１体を対象として発動できる。そのモンスターを破壊する。その後、自分の墓地に「ホール」通常罠カードまたは「落とし穴」通常罠カードが存在する場合、相手の墓地からモンスター１体を選んで除外できる。
   ko:
   zh-TW:
   zh-CN:
@@ -31,7 +32,7 @@ series:
 - Trap Hole
 images:
 - index: 1
-  image: DelusionTrapHole-SD45-JP-OP.png
+  image: DelusionTrapHole-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP027
@@ -40,5 +41,5 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905107
