--- a/data/cards/00952523.yaml
+++ b/data/cards/00952523.yaml
@@ -34,7 +34,7 @@ text:
     Este card Invocado por Invocação-Link não é afetado por efeitos de Armadilha. Você só pode usar cada um dos seguintes efeitos de "Armadilhatrix Cularia" uma vez por turno. Depois que você ativar um Card de Armadilha Normal "Buraco", você pode Baixá-lo em vez de enviá-lo para o Cemitério. Durante sua Fase Final: você pode escolher 1 monstro "Armadilhatrix" no seu Cemitério; Invoque-o por Invocação-Especial em Posição de Defesa.
   ja: |-
     昆虫族・植物族モンスター２体
-    このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：リンク召喚したこのカードは罠カードの効果を受けない。②：このカードがモンスターゾーンに存在する限り、自分が発動した「ホール」通常罠カード及び「落とし穴」通常罠カードは発動後に墓地へ送らず、そのままセットできる。③：自分エンドフェイズに、自分の墓地の「蟲惑魔」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
+    このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：リンク召喚したこのカードは罠カードの効果を受けない。②：このカードがモンスターゾーンに存在する限り、自分が発動した「ホール」通常罠カード及び「落とし穴」通常罠カードは発動後に墓地へ送らずにそのままセットできる。③：自分エンドフェイズに、自分の墓地の「蟲惑魔」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
     곤충족 / 식물족 몬스터 2장
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 링크 소환한 이 카드는 함정 카드의 효과를 받지 않는다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신이 발동한 "홀" 일반 함정 카드 및 "함정 속으로" 일반 함정 카드는 발동 후에 묘지로 보내지 않으며, 그대로 세트할 수 있다. ③: 자신 엔드 페이즈에, 자신 묘지의 "충혹마" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
