--- a/data/cards/06511113.yaml
+++ b/data/cards/06511113.yaml
@@ -34,14 +34,14 @@ text:
     Este card não é afetado por efeitos de Armadilha enquanto tiver Matérias Xyz. Monstros "Armadilhatrix" que você controla, exceto "Armadilhatrix Rafflesia", não podem ser destruídos em batalha ou por efeitos de card. Seu oponente não pode escolher monstros "Armadilhatrix" que você controla como alvos de efeitos de card, exceto "Armadilhatrix Rafflesia". Uma vez por turno, durante o turno de qualquer duelista: você pode desassociar 1 Matéria Xyz deste card e enviar 1 Card de Armadilha Normal "Buraco" cujos requisitos de ativação sejam cumpridos do seu Deck para o Cemitério; este efeito se torna o efeito que esse Card de Armadilha tem quando ativado.
   ja: |-
     レベル４モンスター×２
-    ①：Ｘ素材を持ったこのカードは罠カードの効果を受けない。②：このカードがモンスターゾーンに存在する限り、「フレシアの蟲惑魔」以外の自分フィールドの「蟲惑魔」モンスターは戦闘・効果では破壊されず、相手の効果の対象にならない。③：１ターンに１度、このカードのＸ素材を１つ取り除き、発動条件を満たしている「ホール」通常罠カードまたは「落とし穴」通常罠カード１枚をデッキから墓地へ送って発動できる。この効果は、その罠カード発動時の効果と同じになる。この効果は相手ターンでも発動できる。
+    ①：Ｘ素材を持っているこのカードは罠カードの効果を受けない。②：このカードがモンスターゾーンに存在する限り、「フレシアの蟲惑魔」以外の自分フィールドの「蟲惑魔」モンスターは戦闘・効果では破壊されず、相手の効果の対象にならない。③：自分・相手ターンに１度、このカードのＸ素材を１つ取り除き、デッキから「ホール」通常罠カードまたは「落とし穴」通常罠カード１枚を墓地へ送って発動できる。この効果は、その罠カード発動時の効果と同じになる。
   ko: |-
     레벨 4 몬스터 × 2
     ①: 엑시즈 소재를 가진 이 카드는 함정 카드의 효과를 받지 않는다. ②: 이 카드가 몬스터 존에 존재하는 한, "플레시아의 충혹마" 이외의 자신 필드의 "충혹마" 몬스터는 전투 / 효과로는 파괴되지 않으며, 상대 효과의 대상이 되지 않는다. ③: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 발동 조건을 만족시키고 있는 "홀" 일반 함정 카드 또는 "함정 속으로" 일반 함정 카드 1장을 덱에서 묘지로 보내어 발동할 수 있다. 이 효과는, 그 함정 카드 발동시의 효과와 같아진다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     等级4怪兽×2
-    ①：拥有超量素材的此卡不受陷阱卡的效果影响。②：只要此卡存在于怪兽区域，自己场上"大王花之虫惑魔"以外的"虫惑魔"怪兽不会因战斗・效果被破坏，不会成为对手效果的对象。③：1回合1次，去除此卡的1个超量素材，将1张满足发动条件的"空洞"通常陷阱卡或"落穴"通常陷阱卡从牌组送至墓地可以发动。此效果变为与该陷阱卡发动时的效果相同。此效果在对手回合中也可以发动。
+    ①：拥有超量素材的此卡不受陷阱卡的效果影响。②：只要此卡存在于怪兽区域，自己场上“大王花之虫惑魔”以外的“虫惑魔”怪兽不会因战斗・效果被破坏，不会成为对手效果的对象。③：1回合1次，去除此卡的1个超量素材，将1张满足发动条件的“空洞”通常陷阱卡或“落穴”通常陷阱卡从牌组送至墓地可以发动。此效果变为与该陷阱卡发动时的效果相同。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Plant / Xyz / Effect
 attribute: EARTH
