--- a/data/cards/12801833.yaml
+++ b/data/cards/12801833.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18310
+password: 12801833
 name:
   en: Traptrix Orchard
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の③の効果は１ターンに１度しか使用できない。①：自分は通常召喚に加えて１度だけ、自分メインフェイズに「蟲惑魔」モンスター１体を召喚できる。②：このカードがフィールドゾーンに存在する限り、自分の昆虫族・植物族モンスターは、それぞれ１ターンに１度だけ戦闘では破壊されない。③：自分フィールドのモンスター１体を除外して発動できる。自分の手札・墓地から「蟲惑魔」モンスター１体を選んで特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -29,7 +30,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: TraptrixOrchard-SD45-JP-OP.png
+  image: TraptrixOrchard-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP023
@@ -38,5 +39,5 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 910926
