--- a/data/cards/16223761.yaml
+++ b/data/cards/16223761.yaml
@@ -12,7 +12,7 @@ name:
   ko: 썬더 핸드
   ko_rr: Sseondeo Haendeu
   zh-TW:
-  zh-CN: 雷电手
+  zh-CN: 雷霆手
 text:
   en: |-
     If a face-up monster(s) you control with 1600 original ATK or DEF is destroyed by battle or an opponent's card effect and sent to the GY, while this card is in your hand or GY: You can Special Summon this card (but banish it when it leaves the field), and if you do, destroy 1 card your opponent controls. You can only use this effect of "Thunder Hand" once per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, 원래 공격력 또는 원래 수비력이 1600 인 자신 필드의 앞면 표시 몬스터가 전투 또는 상대 효과로 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 특수 소환하고, 상대 필드의 카드 1장을 골라 파괴한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的效果1回合只能使用1次。
-    ①：这张卡在手卡·墓地存在，原本攻击力或者原本守备力是1600的自己场上的表侧表示怪兽被战斗或者对方的效果破坏送去墓地的场合才能发动。这张卡特殊召唤，选对方场上1张卡破坏。这个效果特殊召唤的这张卡从场上离开的场合除外。
+    此卡名的效果１回合仅可使用１次。①：此卡存在于手牌・墓地，自己场上原本攻击力或原本守备力为１６００的表侧表示怪兽因战斗或对手的效果被破坏并被送至墓地的情况下可以发动。将此卡特殊召唤，挑选对手场上的１张卡破坏。以此效果特殊召唤的此卡离开场上的情况下，将其除外。
 card_type: Monster
 monster_type_line: Thunder / Effect
 attribute: LIGHT
@@ -103,6 +102,11 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC025
+    set_name: Mega Pack 05
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
