--- a/data/cards/29401950.yaml
+++ b/data/cards/29401950.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando seu oponente Invocar um ou mais monstros com 1500 ou mais de ATK: destrua esse(s) monstro(s) com 1500 ou mais de ATK e, se isso acontecer, bana-o(s).
   ja: |-
-    ①：相手が攻撃力１５００以上のモンスターを召喚・反転召喚・特殊召喚した時に発動できる。その攻撃力１５００以上のモンスターを破壊し除外する。
+    ①：相手が攻撃力１５００以上のモンスターの召喚・反転召喚・特殊召喚に成功した時に発動できる。その攻撃力１５００以上のモンスターを破壊し除外する。
   ko: |-
     ①: 상대가 공격력 1500 이상의 몬스터를 일반 소환 / 반전 소환 / 특수 소환했을 때에 발동할 수 있다. 그 공격력 1500 이상의 몬스터를 파괴하고 제외한다.
   zh-TW: |-
