--- a/data/cards/48183890.yaml
+++ b/data/cards/48183890.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18314
+password: 48183890
 name:
   en: Traptrix Atypus
   de:
@@ -24,8 +24,7 @@ text:
   pt:
   ja: |-
     昆虫族・植物族モンスターを含むモンスター２体以上
-    ①：リンク召喚したこのカードは罠カードの効果を受けない。②：自分の墓地に通常罠カードが存在する限り、自分フィールドの「蟲惑魔」モンスターの攻撃力は１０００アップする。③：１ターンに１度、自分フィールドの昆虫族・植物族モンスターの数まで、相手フィールドの表側表示のカードを対象として発動できる。そのカードの効果をターン終了時まで無効にする。その後、以下の効果を適用できる。
-    ●自分の墓地から通常罠カード１枚を除外し、対象の表側表示のカードの内１枚を選んで破壊する。
+    ①：リンク召喚したこのカードは罠カードの効果を受けない。②：自分の墓地に通常罠カードが存在する限り、自分フィールドの「蟲惑魔」モンスターの攻撃力は１０００アップする。③：１ターンに１度、自分フィールドの昆虫族・植物族モンスターの数まで、相手フィールドの表側表示のカードを対象として発動できる。そのカードの効果をターン終了時まで無効にする。その後、以下を適用できる。●自分の墓地から通常罠カード１枚を除外し、対象の表側表示のカードの内１枚を選んで破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -42,7 +41,7 @@ series:
 - Traptrix
 images:
 - index: 1
-  image: TraptrixAtypus-SD45-JP-OP.png
+  image: TraptrixAtypus-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JPP02
@@ -52,5 +51,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905103
