--- a/data/cards/48805472.yaml
+++ b/data/cards/48805472.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18311
+password: 48805472
 name:
   en: Traptrix Allure
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：昆虫族・植物族のレベル４モンスター１体または通常罠カード１枚を手札から捨てて発動できる。自分はデッキから２枚ドローする。②：墓地のこのカードを除外し、除外されている自分の、昆虫族・植物族のレベル４モンスター１体または通常罠カード１枚を対象として発動できる。そのカードをデッキの一番下に戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -29,7 +30,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TraptrixAllure-SD45-JP-OP.png
+  image: TraptrixAllure-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP024
@@ -38,5 +39,5 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 910928
