--- a/data/cards/49131917.yaml
+++ b/data/cards/49131917.yaml
@@ -12,7 +12,7 @@ name:
   ko: 밸리언츠의 무녀－시노노메
   ko_rr: Baellieoncheu-ui Munyeo - Sinonome
   zh-TW:
-  zh-CN: 群豪之巫女-东云
+  zh-CN: 弈勇之巫女－东云
 text:
   en: |-
     During your Main Phase, if you control this Special Summoned card: You can add 1 "Vaylantz" Spell from your Deck to your hand. If this card in the Monster Zone moves to another Monster Zone: You can add 1 "Vaylantz" monster from your Deck to your hand, except "Shinonome the Vaylantz Priestess". You can only use each effect of "Shinonome the Vaylantz Priestess" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 몬스터 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환되어 있을 경우, 자신 메인 페이즈에 발동할 수 있다. 덱에서 "밸리언츠" 마법 카드 1장을 패에 넣는다. ②: 몬스터 존의 이 카드가 다른 몬스터 존으로 이동했을 경우에 발동할 수 있다. 덱에서 "밸리언츠의 무녀－시노노메" 이외의 "밸리언츠" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②怪兽效果1回合各能使用1次。①：这张卡是被特殊召唤而在场的场合，自己的主要阶段可以发动。从卡组将1张「ヴァリアンツ／群豪」魔法卡加入手牌。②：怪兽区的这张卡被移动到其他的怪兽区的场合可以发动。从卡组将1只「ヴァリアンツの巫女－東雲／群豪之巫女-东云」以外的「ヴァリアンツ／群豪」怪兽加入手牌。
+    此卡名的①②怪兽效果1回合仅可各使用1次。①：此卡是被特殊召唤的情况下，在自己的主要阶段可以发动。从牌组将1张"弈勇"魔法卡加入手牌。②：怪兽区域的此卡移动至其他怪兽区域的情况下可以发动。从牌组将1只"弈勇之巫女－东云"以外的"弈勇"怪兽加入手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: WATER
@@ -59,7 +59,7 @@ pendulum_effect:
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 이 카드를 정면의 자신 메인 몬스터 존에 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 "밸리언츠" 몬스터밖에 특수 소환할 수 없다(엑스트라 덱에서의 특수 소환 이외).
   zh-TW:
   zh-CN: |-
-    这个卡名的灵摆效果1回合只能使用1次。①：自己的主要阶段可以发动。将这张卡特殊召唤到正对面的自己的主要怪兽区。这个效果发动后，直到回合结束时自己特殊召唤的只能是「ヴァリアンツ／群豪」怪兽（从额外卡组所作的特殊召唤例外）。
+    此卡名的灵摆效果1回合仅可使用1次。①：在自己的主要阶段可以发动。将此卡特殊召唤至正面的自己的主要怪兽区域。此效果发动后，直至回合结束时为止自己仅可特殊召唤"弈勇"怪兽（除了从额外牌组的特殊召唤以外）。
 series:
 - Vaylantz
 images:
@@ -103,6 +103,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR001
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC001
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
