--- a/data/cards/68535320.yaml
+++ b/data/cards/68535320.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Quando este card em sua posse for destruído por um card do seu oponente e enviado para o seu Cemitério: você pode escolher 1 monstro que seu oponente controla; destrua o alvo e, depois, você pode Invocar por Invocação-Especial 1 "Mão de Gelo" do seu Deck.
   ja: |-
-    ①：このカードが相手によって破壊され墓地へ送られた時、相手フィールドのモンスター１体を対象として発動できる。その相手モンスターを破壊する。その後、自分のデッキから「アイス・ハンド」１体を特殊召喚できる。
+    ①：このカードが相手によって破壊され墓地へ送られた時、相手フィールドのモンスター１体を対象として発動できる。その相手モンスターを破壊する。その後、デッキから「アイス・ハンド」１体を特殊召喚できる。
   ko: |-
     ①: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 때, 상대 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 상대 몬스터를 파괴한다. 그 후, 자신의 덱에서 "아이스 핸드" 1장을 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡被对方破坏送去墓地时，以对方场上1只怪兽为对象才能发动。那只对方怪兽破坏。那之后，可以从自己卡组把1只「寒冰手」特殊召唤。
+    ①：此卡因对手被破坏并被送至墓地时，以对手场上的１只怪兽为对象可以发动。将该对手的怪兽破坏。然后，可从自己的牌组将１只“冰冻手”特殊召唤。
 card_type: Monster
 monster_type_line: Pyro / Effect
 attribute: FIRE
@@ -134,6 +134,11 @@ sets:
     set_name: 'Structure Deck: Master Link'
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC173
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
