--- a/data/cards/73639099.yaml
+++ b/data/cards/73639099.yaml
@@ -52,8 +52,8 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 링크 소환한 이 카드는 함정 카드의 효과를 받지 않는다. ②: 일반 함정 카드가 발동했을 경우에 발동할 수 있다. 같은 이름의 카드가 자신 필드에 존재하지 않는 "충혹마" 몬스터 1장을 덱에서 특수 소환한다. ③: 이 카드 이외의 자신의 "충혹마" 몬스터의 효과가 발동했을 경우에 발동할 수 있다. 덱에서 "홀" 일반 함정 카드 또는 "함정 속으로" 일반 함정 카드 1장을 골라 자신 필드에 세트한다.
   zh-TW:
   zh-CN: |-
-    连接怪兽以外的"虫惑魔"怪兽1只
-    此卡名的②③效果1回合仅可各使用1次。①：连接召唤的此卡不受陷阱卡的效果影响。②：通常陷阱卡发动的情况下可以发动。将1只同名卡不存在于自己场上的"虫惑魔"怪兽从牌组特殊召唤。③：自己此卡以外的"虫惑魔"怪兽的效果发动的情况下可以发动。从牌组挑选1张"空洞"通常陷阱卡或"落穴"通常陷阱卡放置在自己场上。
+    连接怪兽以外的“虫惑魔”怪兽１只
+    此卡名的②③效果１回合仅可各使用１次。①：连接召唤的此卡不受陷阱卡的效果影响。②：通常陷阱卡发动的情况下可以发动。将１只同名卡不存在于自己场上的“虫惑魔”怪兽从牌组特殊召唤。③：自己此卡以外的“虫惑魔”怪兽的效果发动的情况下可以发动。从牌组挑选１张“空洞”通常陷阱卡或“落穴”通常陷阱卡放置在自己场上。
 card_type: Monster
 monster_type_line: Plant / Link / Effect
 attribute: EARTH
@@ -133,6 +133,8 @@ sets:
   - set_number: CL02-SC159
     set_name: Classic Pack 02
     rarities:
+    - Super Rare
+    - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
