--- a/data/cards/74577599.yaml
+++ b/data/cards/74577599.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18315
+password: 74577599
 name:
   en: Traptrix Holetaea
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。このカードは手札から通常罠カード１枚を捨て、セットしたターンに発動する事もできる。①：このカードは発動後、通常モンスター（植物族・地・星４・攻４００／守２４００）となり、モンスターゾーンに守備表示で特殊召喚する（罠カードとしては扱わない）。②：墓地のこのカードを除外し、自分の墓地の「蟲惑魔」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,7 @@ series:
 - Traptrix
 images:
 - index: 1
-  image: TraptrixHoletaea-SD45-JP-OP.png
+  image: TraptrixHoletaea-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JPP05
@@ -42,5 +43,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 913580
