--- a/data/cards/95929069.yaml
+++ b/data/cards/95929069.yaml
@@ -12,7 +12,7 @@ name:
   ko: 아이스 핸드
   ko_rr: Aiseu Haendeu
   zh-TW:
-  zh-CN: 寒冰手
+  zh-CN: 冰冻手
 text:
   en: |-
     When this card in your possession is destroyed by your opponent's card and sent to your GY: You can target 1 Spell/Trap they control; destroy that target, then you can Special Summon 1 "Fire Hand" from your Deck.
@@ -27,12 +27,12 @@ text:
   pt: |-
     Quando este card em sua posse for destruído por um card do seu oponente e enviado para o seu Cemitério: você pode escolher 1 Magia/Armadilha que seu oponente controla; destrua o alvo e, depois, você pode Invocar por Invocação-Especial 1 "Mão de Fogo" do seu Deck.
   ja: |-
-    ①：このカードが相手によって破壊され墓地へ送られた時、相手フィールドの魔法・罠カード１枚を対象として発動できる。その相手のカードを破壊する。その後、自分のデッキから「ファイヤー・ハンド」１体を特殊召喚できる。
+    ①：このカードが相手によって破壊され墓地へ送られた時、相手フィールドの魔法・罠カード１枚を対象として発動できる。その相手のカードを破壊する。その後、デッキから「ファイヤー・ハンド」１体を特殊召喚できる。
   ko: |-
     ①: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 때, 상대 필드의 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 상대의 카드를 파괴한다. 그 후, 자신의 덱에서 "파이어 핸드" 1장을 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡被对方破坏送去墓地时，以对方场上1张魔法•陷阱卡为对象才能发动。那张对方的卡破坏。那之后，可以从自己卡组把1只「火焰手」特殊召唤。
+    ①：此卡因对手被破坏并被送至墓地时，以对手场上１张魔法・陷阱卡为对象可以发动。将该对手的卡破坏。然后，可从自己的牌组将１只“火焰手”特殊召唤。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: WATER
@@ -134,6 +134,11 @@ sets:
     set_name: 'Structure Deck: Master Link'
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC174
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
